2007-02-04  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: skel/INSTALL, skel/Makefile.in, skel/configure.ac,
	          skel/proj/version.kahua.in, skel/test/test.scm.in,
	          src/kahua-package.scm
	* Drop: skel/proj-start.in, skel/proj-stop.in, skel/proj.conf.in
	  Arrange code and simplify them.  Now drop start/stop scripts
	  and in-place execution.

2007-02-03  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: skel/Makefile.in
	  Now clean up properly, and fix some other bugs.

2007-02-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-spvr.scm, src/kahua/developer.scm,
	       src/kahua/persistence.scm, src/kahua/persistence/efs.scm,
	       src/kahua/persistence/dbi.scm
	  Avoid "Unknown keyword WARNING" when work with recent Gauche
	  CVS HEAD version.  But this fix is very transitional, and
	  fix again after next Gauche release.

	* Change: emacs/kahua.el
	  Now run-kahua also work with ssh for remote Kahua.
	  It works very similarly to run-kahua-shell.

	* Change: emacs/kahua.el
	  Now run-kahua-shell prompt your site bundle, and work
	  directory completion.
	  If you specify host, user(for ssh access), or site bundle,
	  The value is used as default value at next time.

2007-02-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: skel/configure.ac, skel/INSTALL, skel/Makefile.in,
	          skel/proj/proj.css, skel/proj/proj.kahua,
	          skel/proj/version.kahua.in, skel/proj.conf.in,
	          skel/test/test.conf.in, skel/test/test.scm.in
	  Don't do "keyword substitution" when check in.

	* Fix: skel/INSTALL
	  Update description.

2007-01-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-httpd.scm
	  If HTTP client sends request and close connection immediately,
	  kahua-httpd couldn't recover the error properly.
	  Reported by Petter Egesund.

2007-01-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/persistence/efs.scm
	  Fix a wrong keyword.

	* Change: src/kahua/developer.scm, src/kahua/error-report.scm